# mediaForge

./: .env  Product Requirement Document.md  README.md  Software Requirements.md  UX Design Document.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
backend/: Cargo.toml  setup.sh
backend/config/: storage.toml
backend/migrations/: 0001_create_tables.sql
backend/src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  routes.rs
backend/src/models/: job.rs  media_asset.rs  user.rs
backend/src/services/: lut.rs  mod.rs  processing.rs  queue.rs  quota.rs  storage.rs  worker.rs
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css  index.js  styles.css
frontend/src/components/: AuthModal.jsx  FreeLimitModal.jsx  Header.jsx  JobsList.jsx  Modal.jsx  Preview.jsx  Sidebar.jsx  ToolPanel.jsx  UploadZone.jsx  Workspace.jsx
specs/001-mediaforge-create-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mediaforge-create-mvp/contracts/: contract_tests.md  openapi.yaml
tests/contract/: test_convert.py  test_status.py  test_upload.py
